<resources>
    <string name="app_name">ApplicantsCrud</string>
    <string name="login_message">Login Activity</string>
    <string name="user_field">Username</string>
    <string name="password_field">Password</string>
    <string name="login_button">Login</string>
    <string name="menu_message">Menu Activity</string>
    <string name="add_applicant">Add Applicant</string>
    <string name="view_applicant">View Applicant</string>
    <string name="view_message">View Activity</string>
    <string name="view_search_button">Search</string>
    <string name="applicant_document">Document</string>
    <string name="applicant_name">Name</string>
    <string name="applicant_lastname">Lastname</string>
    <string name="applicant_birthday">Birthday</string>
    <string name="applicant_school">School</string>
    <string name="applicant_career">Career</string>
    <string name="holding_output">ABC</string>
    <string name="add_message">Add Activity</string>
    <string name="add_button">Add Applicant</string>
</resources>